@@ -25,7 +25,7 @@ AC_FUNC_MMAP
 
 # set the libtool shared library version numbers
 lt_major=9
-lt_revision=0
+lt_revision=1
 lt_age=0
 
 AC_SUBST(lt_major)
